@@ -5,8 +5,6 @@ from dbus.mainloop.glib import DBusGMainLoop
 DBusGMainLoop(set_as_default=True)
 from gi.repository import Gtk, GObject
 
-from ubiquity.misc import utf8
-
 NM = 'org.freedesktop.NetworkManager'
 NM_DEVICE = 'org.freedesktop.NetworkManager.Device'
 NM_DEVICE_WIFI = 'org.freedesktop.NetworkManager.Device.Wireless'
@@ -24,8 +22,7 @@ NM_STATE_CONNECTED_GLOBAL = 70
 # TODO: DBus exceptions.  Catch 'em all.
 
 def decode_ssid(characters):
-    ssid = ''.join([chr(int(char)) for char in characters])
-    return utf8(ssid, errors='replace')
+    return bytearray(characters).decode('UTF-8', 'replace')
 
 def get_prop(obj, iface, prop):
     try:
